--- a/main.tex
+++ b/main.tex
@@ -35,7 +35,7 @@
 \definecolor{lblue}{HTML}{137B8A}
 \definecolor{dblue}{HTML}{1C5493}
 
-\setcounter{tocdepth}{1}
+% \setcounter{tocdepth}{1}
 
 \title[MI a csillagászatban]{Hogyan változtatja meg a mesterséges intelligencia a csillagászatot?}
 \subtitle{És úgy általában a tudományt...}
@@ -51,7 +51,7 @@
         \vspace*{0.5cm}
         Budapest \\
         \vspace*{0.5cm}
-        2020. október 26.
+        2020. október 27.
     \end{column}
 \end{columns}
 }
@@ -69,8 +69,11 @@
 
 
 \input{tex/introduction.tex}
-\section{A gépi tanulás alkalmazásai}
+\section{A gépi tanulás alkalmazásai a csillagászatban}
 \input{tex/heliocentric_model}
 \input{tex/ai_physicist}
+\input{tex/kepler_80}
+\input{tex/forecasting_solar_cycle}
+
 
 \end{document}
