Minor changes and change directory structure

--- a/main.tex
+++ b/main.tex
@@ -38,9 +38,8 @@
 % \setcounter{tocdepth}{1}
 
 \title[MI a csillagászatban]{Hogyan változtatja meg a mesterséges intelligencia a csillagászatot?}
-\subtitle{És úgy általában a tudományt...}
 \author{Hanyecz Ottó} 
-\date[MTT, \today]
+\date[Polaris, \today]
 {
 \begin{columns}
     \begin{column}{0.9\textwidth}
@@ -74,6 +73,8 @@
 \input{tex/ai_physicist}
 \input{tex/kepler_80}
 \input{tex/forecasting_solar_cycle}
+\input{tex/discussion}
+\input{tex/suggested_readings}
 
 
 \end{document}
