--- a/tex/ai_physicist.tex
+++ b/tex/ai_physicist.tex
@@ -1,6 +1,6 @@
 \subsection{Fizikus MI}
 \begin{frame}{Fizikus MI}
-    Eredeti cikk: \href{https://arxiv.org/abs/1810.10525}{Toward an AI Physicist for Unsupervised Learning} \\
+    Eredeti cikk: \href{https://arxiv.org/pdf/1810.10525.pdf}{Toward an AI Physicist for Unsupervised Learning} \\
     Miért jobb az ember?
     \begin{itemize}
         \item Az adatok más forrásból jönnek $\rightarrow$ általánosítási problémák
@@ -43,7 +43,7 @@
         \item Könnyű problémákat tud megoldani
         \item Felügyelt tanulással osztályozási problémává válik a feladat $\rightarrow$ előrejelzés egyszerűen megoldható
         \item Valóság nem osztályozott: határokat a mozgással együtt kell megtanulni
-        \item Előrejelzési hiba {\it nagyon} lecsökkent (MSE: $10^{-13}$)
+        \item Előrejelzési hiba {\it nagyon} lecsökkent
         \item Kaotikus rendszerekre is működik ugyanilyen hibával
     \end{itemize}
     
