--- a/tex/forecasting_solar_cycle.tex
+++ b/tex/forecasting_solar_cycle.tex
@@ -4,24 +4,13 @@
     \centering
     \Huge{A 25. napciklus előrejelzése}\\
     \vspace*{1cm}
-    \large{Benson, B., Pan, W.D., Prasad, A. et al. \\ \href{https://doi.org/10.1007/s11207-020-01634-y}{Forecasting Solar Cycle 25 Using Deep Neural Networks}. \\ Sol Phys 295, 65 (2020)} \\ 
-    \vspace*{0.2cm}
-    \large{arXiv: \href{https://arxiv.org/abs/2005.12406}{2005.12406}}
+    \large{Benson, B., Pan, W.D., Prasad, A. et al. \\ \href{https://arxiv.org/pdf/2005.12406.pdf}{Forecasting Solar Cycle 25 Using Deep Neural Networks}. \\ Sol Phys 295, 65 (2020)}
 \end{frame}
 
 \begin{frame}{Napciklus}
     \centering
     \includegraphics[width=1.0\textwidth]{figures/sunspot_number.png}
 \end{frame}
-
-% \begin{frame}{Módszerek}
-%     \begin{itemize}
-%         \item Periodicitás és trendek alapján
-%         \item Geomágneses aktivitás: minimum környékén nézik, kettébontható (flerek és CME) + nagy sebességű napszél 
-%         \item ...
-%         \item Itt: idősor-analízis mély neurális hálókkal
-%     \end{itemize}
-% \end{frame}
 
 \begin{frame}{Előrejelzés mozgó átlaggal}
     \begin{itemize}
@@ -75,6 +64,11 @@
     \href{https://deepmind.com/blog/article/wavenet-generative-model-raw-audio}{WaveNet} - generatív modell hang generáláshoz
     \centering
     \includegraphics[width=1.0\textwidth]{figures/wavenet_dilated_cnn.png}
+\end{frame}
+
+\begin{frame}{Az alkalmazott modell}
+    \centering
+    \includegraphics[width=1.0\textwidth]{figures/solar_cycle_model.png}
 \end{frame}
 
 \begin{frame}{Miért?}
