--- a/tex/heliocentric_model.tex
+++ b/tex/heliocentric_model.tex
@@ -4,7 +4,7 @@
     \centering
     \Huge{Heliocentrikus modell "újrafelfedezése"}\\
     \vspace*{1cm}
-    \large{}
+    \large{Raban Iten et al. \href{https://arxiv.org/pdf/1807.10300.pdf}{Discovering physical concepts with neural networks} (2020)}
 \end{frame}
 
 \begin{frame}{Fizikai modellek tanulása 1.}
@@ -82,6 +82,16 @@
     \end{tikzpicture}
 \end{frame}
 
+\begin{frame}{Autoencoder - Kerék meghibásodás}
+    \centering
+    \includegraphics[width=1.0\textwidth]{figures/gear_measurements.png}
+\end{frame}
+
+\begin{frame}{Autoencoder - Kerék meghibásodás}
+    \centering
+    \includegraphics[width=1.0\textwidth]{figures/gear_rec_loss.png}
+\end{frame}
+
 \begin{frame}{Fizikai modellek tanulása 2.}
     \centering
     \begin{tikzpicture}[scale=0.9]
@@ -128,17 +138,6 @@
         \draw (0,4) node {\small Kérdés};
     \end{tikzpicture}
 \end{frame}
-
-\begin{frame}{Autoencoder - Kerék meghibásodás}
-    \centering
-    \includegraphics[width=1.0\textwidth]{figures/gear_measurements.png}
-\end{frame}
-
-\begin{frame}{Autoencoder - Kerék meghibásodás}
-    \centering
-    \includegraphics[width=1.0\textwidth]{figures/gear_rec_loss.png}
-\end{frame}
-
 
 \begin{frame}{Heliocentrikus modell "újrafelfedezése"}
     \centering
