--- a/tex/introduction/big_data.tex
+++ b/tex/introduction/big_data.tex
@@ -3,7 +3,7 @@
     \begin{columns}
         \begin{column}{0.5\textwidth}
             Large Synoptic Survey Telescope
-            \begin{itemize}[<+->]
+            \begin{itemize}
                 \item Minden éjszaka feltérképezi a fél eget, ami
                 \item 15 terabájt (TB) adatot termel.
                 \item 10 év alatt 50 petabájt (1 PB = 1000 TB) nyers adat keletkezik,
@@ -11,7 +11,7 @@
             \end{itemize}
             
             CERN
-            \begin{itemize}[<+->]
+            \begin{itemize}
                 \item 2017. december: 1 PB adat közzététele (\href{https://home.cern/news/news/experiments/cms-releases-more-one-petabyte-open-data}{\textcolor{cyan}{CERN News}})
                 \item Összesen $\sim$1,5 PB
             \end{itemize}
