--- a/tex/kepler_80.tex
+++ b/tex/kepler_80.tex
@@ -4,7 +4,7 @@
     \centering
     \Huge{Exobolygók detektálása a Kepler-80 és Kepler-90 rendszerekben}\\
     \vspace*{1cm}
-    \large{Shallue, Christopher J.; Vanderburg, Andrew \\ \href{https://iopscience.iop.org/article/10.3847/1538-3881/aa9e09}{Identifying Exoplanets with Deep Learning: A Five-planet Resonant Chain around Kepler-80 and an Eighth Planet around Kepler-90}. \\ The Astronomical Journal, Volume 155, Issue 2, article id. 94, 21 pp. (2018)}
+    \large{Shallue, Christopher J.; Vanderburg, Andrew \\ \href{https://iopscience.iop.org/article/10.3847/1538-3881/aa9e09/pdf}{Identifying Exoplanets with Deep Learning: A Five-planet Resonant Chain around Kepler-80 and an Eighth Planet around Kepler-90}. \\ The Astronomical Journal, Volume 155, Issue 2, article id. 94, 21 pp. (2018)}
 \end{frame}
 
 \begin{frame}
