--- a/tex/introduction/neural_networks.tex
+++ b/tex/introduction/neural_networks.tex
@@ -47,13 +47,13 @@
     \end{tikzpicture}
 \end{frame}
 
-\begin{frame}{Neurális hálók - aktivációs függvények}
-    \hspace*{-1.5cm}
-    \includegraphics[width=1.23\textwidth]{figures/activation_functions.pdf} \\
-    ReLU = rectified linear units
-\end{frame}
+% \begin{frame}{Neurális hálók - aktivációs függvények}
+%     \hspace*{-1.5cm}
+%     \includegraphics[width=1.23\textwidth]{figures/activation_functions.pdf} \\
+%     ReLU = rectified linear units
+% \end{frame}
 
-\begin{frame}{Neuráis hálók - Feed-forward háló}
+\begin{frame}{Neurális hálók - Feed-forward háló}
     \centering
     \begin{tikzpicture}
         % Input layer
@@ -96,10 +96,10 @@
         }
         
         % Feliratok
-        \draw (-3,   2)   node[text width=2cm]   {Input layer};
-        \draw ( 0,   3.7) node[text width=2.5cm] {Hidden layer 1};
-        \draw ( 3,   3)   node[text width=2.5cm] {Hidden layer 2};
-        \draw ( 6,   1.5) node[text width=2.5cm] {Output layer};
+        \draw (-3,   2)   node[text width=2.5cm] {Bemeneti réteg};
+        \draw ( 0,   3.7) node[text width=2.5cm] {Rejtett réteg 1};
+        \draw ( 3,   3)   node[text width=2.5cm] {Rejtett réteg 2};
+        \draw ( 6,   1.5) node[text width=2.5cm] {Kimeneti réteg};
         \draw (-1,  -2.5) node[text width=2.5cm] {$W_1$};
         \draw ( 2.5,-3)   node[text width=2.5cm] {$W_2$};
         \draw ( 5.,-2)   node[text width=2.5cm] {$W_3$};
@@ -117,7 +117,6 @@
         \item Nincs általános háló
         \item Próbálgatással kell a jó hálót beállítani (vagy ügyesen megsejteni)
         \item Feed-forward hálók nem foglalkoznak a bemenet térbeli felépítésével
-        \item Mennyi 
     \end{itemize}
     
     Megoldás: 
@@ -125,6 +124,6 @@
         \item Mély neurális hálók
         \item Konvolúciós neurális hálók
         \item Generatív modellek
+        \item ...és még sok más
     \end{itemize}
 \end{frame}
-
